# ARES-core

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  go.mod  go.sum
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: go.yml  keygen-bench.yml  openfhe.yml
clients/kotlin/: README.md  build.gradle.kts  settings.gradle.kts
clients/kotlin/ares-client/: build.gradle.kts
clients/kotlin/ares-client-fhe/: build.gradle.kts
clients/kotlin/ares-smoke/: build.gradle.kts
clients/kotlin/e2e/: auction.sh  boundcheck.sh  voting.sh
clients/kotlin/native/: CMakeLists.txt  jni_openfhe.cpp  openfhe_wrapper.cpp  openfhe_wrapper.h
clients/kotlin/scripts/: build-native.sh
clients/python/: .gitignore  README.md  pyproject.toml
clients/python/ares_client/: __init__.py  __main__.py  cli.py  config.py  crypto.py  gossip.py  lineage.py  onion.py  openfhe.py  pipeline.py  session.py
clients/python/examples/: README.md  auction_config.py  auction_homelab_smoke.py  auction_openfhe_smoke.py  cohort_formation_config.py  cohort_formation_homelab_smoke.py  cohort_formation_openfhe_smoke.py  cohort_formation_stub_smoke.py  cohort_homelab_smoke.py  cohort_openfhe_smoke.py  cohort_weekly_config.py  rideshare_config.py  rideshare_homelab_smoke.py  rideshare_openfhe_smoke.py  rideshare_stub_smoke.py
clients/python/tests/: test_config.py  test_crypto.py  test_e2e_auction.py  test_gossip.py  test_lineage_vectors.py  test_onion.py  test_openfhe.py  test_pipeline.py  test_session.py
clients/swift/: Package.resolved  Package.swift  README.md
clients/swift/Sources/: MacClient
clients/swift/e2e/: auction.sh  boundcheck.sh  lib.sh  voting.sh
cmd/openfhe-contract-helper/: main.go  main_stub.go
deploy/: README.md
deploy/caddy/: api.fheya.de.snippet
deploy/scripts/: build.sh  swap.sh
deploy/systemd/: ares-auction.service  ares-cohort-formation.service  ares-cohort-weekly.service  ares-rideshare.service
docs/: sp-d-nc-a2-spike-notes.md
docs/migrations/: fheya-server.md
examples/blind_bfv_payload_fuse/: README.md  example.go  example_test.go
examples/bounded_admission/: README.md  crypto_openfhe.go  crypto_stub.go  phases.go  runner.go  runner_test.go  states.go
examples/light_bfv_payload_fuse/: README.md  example.go  example_test.go
examples/recurring_cohort_ranking/: README.md  bitflip_test.go  endtoend_test.go  insecure_optout_test.go  lineage_helper_test.go  phases.go  pipeline_test.go  runner.go  runner_test.go  states.go  tamper_test.go
examples/ride_share/: README.md  bitflip_test.go  endtoend_test.go  insecure_optout_test.go  lineage_helper_test.go  phases.go  pipeline_test.go  runner.go  runner_test.go  states.go  tamper_test.go
examples/sealed_bid_auction/: README.md  bitflip_test.go  endtoend_test.go  helper_argmax_test.go  insecure_optout_test.go  lineage_helper_test.go  phases.go  pipeline_test.go  runner.go  runner_test.go  states.go  tamper_test.go  test_helpers_test.go
examples/voting/: README.md  bitflip_test.go  phases.go  pipeline_test.go  runner.go  shuffle_test.go  states.go  tamper_test.go
pkg-config/: openfhe.pc.in
pkg/ares/authclient/: credentials.go  credentials_test.go  service.go  service_test.go
pkg/ares/lineage/: README.md  commit.go  commit_test.go  doc.go  ephemeral_signer_test.go  errors.go  errors_test.go  inmemory.go  inmemory_test.go  node.go  node_json_test.go  node_test.go  node_vectors_test.go  phase1_integration_test.go  (+3 more)
(+249 files in other folders)
